# nanomind

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: buckets.yaml  dataset.yaml  paths.yaml  processing.yaml  tokenizer.yaml  tokenizer_data.yaml
configs/: accelerate_config.yaml  ds_config_zero2.json  ds_config_zero2_offload.json  ds_config_zero3.json  fineweb.yaml  fineweb_quick.yaml  nanomind_1b.yaml
docs/: KNOWLEDGE_BASE.md  PRETRAINING.md  PRETRAINING_GUIDE.md  README.md  datatrove_api_research.md  fineweb-edu-chinese-score-analysis.md  fineweb_edu_data_reorganization_design.md  fineweb_edu_reorganization_plan.md  prepare_tokenizer_data_implementation.md  pretrain_design.md  tokenizer_training_design.md
experiments/: __init__.py  exp_000_environment_check.py  exp_001_dataset_exploration_fineweb_edu.py  exp_001_dataset_exploration_fineweb_edu.py.bak  exp_001_datasets_stats.py  exp_002_custom_stats.py  fineweb_demo.py  fineweb_explore.py  fineweb_stats_collector.py  run_fineweb.py
scripts/: bucket_documents.py  calculate_token_lengths.py  convert_sp_to_hf.py  create_test_dataset.py  launch_training.sh  prepare_template.py  prepare_tokenizer_data.py  prepare_tokenizer_template.py  run_processing.sh  train.py  train_tokenizer.py  train_tokenizer_sp.py  trial_run.py  utils.py  validate_output.py  validate_pretrain_data.py  verify_tokenizer.py
src/: constants.py
tests/: conftest.py  test_adapters.py  test_bucket_config.py  test_bucket_path_writer.py  test_fineweb_reorganizer.py  test_parquet_merger.py  (+2 more)
(+61 files in other folders)
