[project]
name = "nanomind"
version = "0.1.0"
description = "A study project for llm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "deepspeed>=0.18.1",
    "numpy>=2.3.4",
    "swanlab>=0.6.13",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
